[tool.poetry]
name = "Dekevich_brain_games"
version = "0.2.0"
description = "First Hexlet Python Project"
authors = ["Denis Dekevich <da.dekevich@gmail.com>"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
