[tool.poetry]
name = "Dekevich_brain_games"
version = "0.4.0"
description = "First Hexlet Python Project"
authors = ["Denis Dekevich <da.dekevich@gmail.com>"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
